<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".ui.main.SkaikChalet">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="332dp"
        android:layout_height="274dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="1dp"
        app:srcCompat="@drawable/skaik" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="293dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="  Skaik Chalet"
        android:textColor="#19A3FF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/descrption"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="330dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/palestine_gaza"
        android:textColor="#0C4271"
        android:textSize="9sp" />

    <TextView
        android:id="@+id/details"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="376dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/details"
        android:textColor="#19A3FF"
        android:textSize="13sp" />


    <TextView
        android:id="@+id/tv_item_ladescrption"
        android:layout_width="359dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="409dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/elegant_rooms_come_with_wi_fi_flat_screen_tvs_and_iphone_docks_plus_sitting_areas_and_work_desks_and_bedroom_ansuites_and_add_separate_living_rooms_provide_kitchens"
        android:textColor="#0C4271"
        android:textSize="9sp" />


    <TextView
        android:id="@+id/price"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="490dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/price"
        android:textColor="#19A3FF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/vprice"
        android:layout_width="83dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="524dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="130$"
        android:textColor="#0C4271"
        android:textSize="10sp" />

    <android.widget.Button
        android:id="@+id/BookBtn"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/half_blue_roundshape"
        android:gravity="center"
        android:text="@string/book_now"
        android:textAllCaps="false"
        android:textColor="@color/black" />



</RelativeLayout>