<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.Booking"
    android:background="#f2f2f2">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="-445dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/rectangle_1" />

    <CalendarView

        android:id="@+id/calender"
        android:layout_width="290dp"
        android:layout_height="213dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="499dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/chalet_booking"
        android:textColor="#00BCD4"
        android:textSize="15sp" />

    <TextView
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="244dp"
        android:layout_marginRight="17dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Date"
        android:textColor="#19A3FF"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"

        android:layout_marginTop="303dp"
        android:layout_marginRight="17dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/guests"
        android:textColor="#19A3FF"
        android:textSize="16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="347dp"
        android:layout_marginRight="17dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/adults"
        android:textColor="#0C4271"
        android:textSize="11sp" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="344dp"
        android:entries="@array/adalt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="346dp"
        android:layout_marginRight="94dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Children"
        android:textColor="#0C4271"
        android:textSize="11sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="307dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="341dp"
        android:entries="@array/Children"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="418dp"
        android:layout_marginRight="17dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/rooms"
        android:textColor="#19A3FF"

        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="359dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="235dp"
        android:entries="@array/Rooms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="525dp"
        android:layout_marginRight="17dp"

        android:fontFamily="@font/poppins_semibold"
        android:text="@string/payment"
        android:textColor="#19A3FF"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editpayment"
        android:layout_width="292dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="130dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <android.widget.Button
        android:id="@+id/btnBook"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/half_blue_roundshape"
        android:gravity="center"
        android:text="BOOK"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12dp" />

</RelativeLayout>



