<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.login"
    android:background="#f2f2f2">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38.3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="32dp"
                    android:gravity="center_horizontal"
                    android:text="@string/log_in"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#333232"
                    android:textSize="30sp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:orientation="vertical">





                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="7.3dp"
                        android:background="@drawable/small_cicle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <FrameLayout
                        android:id="@+id/half_circle"
                        android:layout_width="50dp"
                        android:layout_height="100dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/half_circle"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="14.5dp">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="35.6dp"
                    android:layout_marginBottom="90dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/white_cueve_bg">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="19dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20.3dp"
                            android:gravity="center_horizontal"
                            android:text="@string/hello"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="#333232"
                            android:textSize="14sp"/>



                        <TextView
                            android:id="@+id/UserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22.3dp"
                            android:text="@string/username"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="#9e9d9d"
                            android:textSize="12.3sp"/>

                        <EditText
                            android:id="@+id/edit1"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:paddingTop="5dp"
                            android:textColorHint="#333232"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:textSize="15dp"/>



                        <TextView
                            android:id="@+id/Password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginTop="23dp"
                            android:text="@string/password"
                            android:textColor="#9e9d9d"
                            android:textSize="12.3sp"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp">

                            <EditText
                                android:id="@+id/edit2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:background="@android:color/transparent"
                                android:inputType="textPassword"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:textColor="#333232"
                                android:textCursorDrawable="@drawable/cursor_color"
                                android:textSize="15dp"/>


                            <TextView
                                android:id="@+id/txtforget"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="bottom"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="bottom"
                                android:text="@string/i_forget"
                                android:textColor="#38b5f2"
                                android:textSize="13.3sp" />



                        </RelativeLayout>





                        <android.widget.Button
                            android:id="@+id/btnBook"
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:text="@string/login1"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="25dp"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:gravity="center"
                            android:layout_gravity="right"
                            android:background="@drawable/half_blue_roundshape"
                            />





                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/register_by"
                    android:textColor="#38b5f2"
                    android:textSize="13.sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="26.7dp"
                    android:layout_height="26.7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/fb"/>

                <ImageView
                    android:layout_width="26.7dp"
                    android:layout_height="26.7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/instagram"/>

                <ImageView
                    android:layout_width="26.7dp"
                    android:layout_height="26.7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/twitter"/>


                <ImageView
                    android:layout_width="26.7dp"
                    android:layout_height="26.7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/linkedin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">






                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/new_user"
                    android:textColor="#333232"
                    android:textSize="13.3sp"/>


                <TextView
                    android:id="@+id/regester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/rrgrster_now"
                    android:layout_marginLeft="5dp"
                    android:textColor="#38b5f2"
                    android:textSize="13.3sp"/>




            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

