<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-526dp"
        android:layout_marginEnd="11dp"
        android:src="@drawable/rectangle_1" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:ems="10"
        android:hint="@string/chalet_name"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/recomand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="17dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/recomanded"
        android:textColor="#0C4271"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/gallery1"
        android:layout_width="390dp"
        android:layout_height="172dp"
        android:layout_below="@+id/recomand"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/whiteimg"
            android:layout_width="181dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/white" />


        <ImageButton
            android:id="@+id/mariaimg"
            android:layout_width="181dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/miral" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gallery2"
        android:layout_width="390dp"
        android:layout_height="172dp"
        android:layout_below="@+id/gallery1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/helenimg"
            android:layout_width="181dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/modern_lake_house" />


        <ImageButton
            android:id="@+id/miravalimg"
            android:layout_width="181dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/mera" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="172dp"
        android:layout_below="@+id/gallery2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/skaikimg"
            android:layout_width="181dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/skaik" />


        <ImageButton
            android:id="@+id/eliteimg"
            android:layout_width="181dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/elite" />

    </LinearLayout>


    <TextView
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="#0C4271"
        android:textSize="20sp" />
</RelativeLayout>